feat: enhance UserService with new user operations and controller endpoints
- Add methods in `UserService`:
  * `getAllUsers` for retrieving all users
  * `getCurrentUser` (temporary hardcoded user, replaceable via auth)
  * `getUserByEmail` for email-based user lookup
  * `updateUserBudget` for budget-only updates
- Update `UserController` with endpoints:
  * GET `/api/v1/users` to list all users
  * GET `/api/v1/users/current` to get the current active user
  * GET `/api/v1/users/email/{email}` for email-based user retrieval
  * PUT `/api/v1/users/{id}/budget` to update user budget
- Add `BudgetUpdateRequest` DTO for budget validation
- Improve entity mapping with placeholder password hash for future authentication
- Minor fixes and refactoring in `CartItemController` and `CartItemService`